--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
             android:id="@+id/container_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="com.trevorism.easypasscost.MainActivity">
+            tools:context="com.trevorism.soundboard.MainActivity">
 
     <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
