--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,12 @@
             android:layout_height="match_parent"
             tools:context="com.trevorism.soundboard.MainActivity">
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/board"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:padding="50dp"
-                android:columnCount="2"
-        >
+    <GridLayout
+        android:id="@+id/board"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="50dp"
+        android:columnCount="2">
 
         <Button
             android:onClick="baam"
